force-app/main/default/objects/Lead/fields/Age_of_youngest_child__c.field-meta.xml
<CustomField>
    <fullName>Age_of_youngest_child__c</fullName>
    <inlineHelpText>Number of Years.</inlineHelpText>
    <label>Age of youngest child</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>