force-app/main/default/objects/Lead/fields/Alternate_Date_of_Surgery__c.field-meta.xml
<CustomField>
    <fullName>Alternate_Date_of_Surgery__c</fullName>
    <label>Alternate Date of Surgery</label>
    <type>Date</type>
</CustomField>