force-app/main/default/objects/Lead/fields/Any_food_allergies__c.field-meta.xml
<CustomField>
    <fullName>Any_food_allergies__c</fullName>
    <label>Any food allergies?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>