force-app/main/default/objects/Lead/fields/Any_underlying_diseases__c.field-meta.xml
<CustomField>
    <fullName>Any_underlying_diseases__c</fullName>
    <label>Any underlying diseases?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>