force-app/main/default/objects/Lead/fields/Cancer_location_in_the_body_family__c.field-meta.xml
<CustomField>
    <fullName>Cancer_location_in_the_body_family__c</fullName>
    <label>If cancer, specify location in body fam</label>
    <length>255</length>
    <type>Text</type>
</CustomField>