force-app/main/default/objects/Lead/fields/Condition_major_accident__c.field-meta.xml
<CustomField>
    <fullName>Condition_major_accident__c</fullName>
    <label>Condition Major Accident</label>
    <length>255</length>
    <type>Text</type>
</CustomField>