force-app/main/default/objects/Lead/fields/Current_medications_being_taken__c.field-meta.xml
<CustomField>
    <fullName>Current_medications_being_taken__c</fullName>
    <label>Current medications being taken</label>
    <length>255</length>
    <type>Text</type>
</CustomField>