force-app/main/default/objects/Lead/fields/Days_in_Package__c.field-meta.xml
<CustomField>
    <fullName>Days_in_Package__c</fullName>
    <label>Days in Package</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>