force-app/main/default/objects/Lead/fields/Desired_implants__c.field-meta.xml
<CustomField>
    <fullName>Desired_implants__c</fullName>
    <label>Desired implants?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Saline</fullName>
            </value>
            <value>
                <fullName>Silicone Gel</fullName>
            </value>
            <value>
                <fullName>Unsure</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>