force-app/main/default/objects/Lead/fields/Desired_placement_of_implants__c.field-meta.xml
<CustomField>
    <fullName>Desired_placement_of_implants__c</fullName>
    <label>Desired placement of implants?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Behind of muscle</fullName>
            </value>
            <value>
                <fullName>In-front of muscle</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>