force-app/main/default/objects/Lead/fields/Do_you_have_alcohol_dependency__c.field-meta.xml
<CustomField>
    <fullName>Do_you_have_alcohol_dependency__c</fullName>
    <label>Do you have alcohol dependency?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>