force-app/main/default/objects/Lead/fields/Family_Medical_History__c.field-meta.xml
<CustomField>
    <fullName>Family_Medical_History__c</fullName>
    <label>Family Medical History</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Asthma</fullName>
            </value>
            <value>
                <fullName>Cancer</fullName>
            </value>
            <value>
                <fullName>Diabetes</fullName>
            </value>
            <value>
                <fullName>Heart Diseases</fullName>
            </value>
            <value>
                <fullName>Hypertension</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>