force-app/main/default/objects/Lead/fields/For_Women_only_Specify_your_Medication__c.field-meta.xml
<CustomField>
    <fullName>For_Women_only_Specify_your_Medication__c</fullName>
    <label>For Women only: Specify your Medication</label>
    <length>255</length>
    <type>Text</type>
</CustomField>