force-app/main/default/objects/Lead/fields/HRT_Medications_Hormone_Patch__c.field-meta.xml
<CustomField>
    <fullName>HRT_Medications_Hormone_Patch__c</fullName>
    <label>HRT Medications/Hormone Patch</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>