force-app/main/default/objects/Lead/fields/If_cancer_specify_location_in_the_body__c.field-meta.xml
<CustomField>
    <fullName>If_cancer_specify_location_in_the_body__c</fullName>
    <label>If cancer, specify location in the body</label>
    <length>255</length>
    <type>Text</type>
</CustomField>