force-app/main/default/objects/Lead/fields/If_YES_please_specify__c.field-meta.xml
<CustomField>
    <fullName>If_YES_please_specify__c</fullName>
    <label>If YES please specify</label>
    <type>TextArea</type>
</CustomField>