force-app/main/default/objects/Lead/fields/If_Yes_specify_medications__c.field-meta.xml
<CustomField>
    <fullName>If_Yes_specify_medications__c</fullName>
    <label>If Yes, specify medications</label>
    <type>TextArea</type>
</CustomField>