force-app/main/default/objects/Lead/fields/Medical_History__c.field-meta.xml
<CustomField>
    <fullName>Medical_History__c</fullName>
    <label>Medical History</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Asthma</fullName>
            </value>
            <value>
                <fullName>Bleeding Tendency</fullName>
            </value>
            <value>
                <fullName>Cancer</fullName>
            </value>
            <value>
                <fullName>Cardio Vascular Accidents</fullName>
            </value>
            <value>
                <fullName>Deep Vein Thrombosis</fullName>
            </value>
            <value>
                <fullName>Diabetes</fullName>
            </value>
            <value>
                <fullName>HIV</fullName>
            </value>
            <value>
                <fullName>Heart Disease</fullName>
            </value>
            <value>
                <fullName>Hepatitis B</fullName>
            </value>
            <value>
                <fullName>Hypertension</fullName>
            </value>
            <value>
                <fullName>Hyperthyroidism</fullName>
            </value>
            <value>
                <fullName>Keloid Scarring</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>