force-app/main/default/objects/Lead/fields/Please_specify_history_of_smoking__c.field-meta.xml
<CustomField>
    <fullName>Please_specify_history_of_smoking__c</fullName>
    <label>Please specify history of smoking</label>
    <type>TextArea</type>
</CustomField>