force-app/main/default/objects/Lead/fields/Procedures_Requested__c.field-meta.xml
<CustomField>
    <fullName>Procedures_Requested__c</fullName>
    <label>Procedures Requested</label>
    <type>TextArea</type>
</CustomField>