force-app/main/default/objects/Lead/fields/RH__c.field-meta.xml
<CustomField>
    <fullName>RH__c</fullName>
    <label>RH</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Unsure</fullName>
            </value>
            <value>
                <fullName>Negative</fullName>
            </value>
            <value>
                <fullName>Positive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>