force-app/main/default/objects/Lead/fields/SuperannutionId__c.field-meta.xml
<CustomField>
    <fullName>SuperannutionId__c</fullName>
    <description>this field is for the superannuation id.</description>
    <label>SuperannutionId</label>
    <length>225</length>
    <type>Text</type>
</CustomField>