force-app/main/default/objects/Lead/fields/Travel_Companion_Date_of_Birth__c.field-meta.xml
<CustomField>
    <fullName>Travel_Companion_Date_of_Birth__c</fullName>
    <label>Travel Companion Date of Birth</label>
    <type>Date</type>
</CustomField>