force-app/main/default/objects/Lead/fields/Travel_Companion_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Travel_Companion_First_Name__c</fullName>
    <label>Travel Companion First Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>