force-app/main/default/objects/Lead/fields/VisualAntidote__Fast_Forms_Auto_Assign__c.field-meta.xml
<CustomField>
    <fullName>VisualAntidote__Fast_Forms_Auto_Assign__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field must be added to a form as a hidden checked field to enable auto-assignment rules.</description>
    <label>Formstack Auto-Assign</label>
    <type>Checkbox</type>
</CustomField>