force-app/main/default/objects/Lead/fields/VisualAntidote__Fast_Forms_Autoresponse__c.field-meta.xml
<CustomField>
    <fullName>VisualAntidote__Fast_Forms_Autoresponse__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field must be added to a form as a hidden checked field to enable auto-response rules.</description>
    <label>Formstack Autoresponse</label>
    <type>Checkbox</type>
</CustomField>