force-app/main/default/objects/Lead/fields/Vitamins_or_supplements_being_taken__c.field-meta.xml
<CustomField>
    <fullName>Vitamins_or_supplements_being_taken__c</fullName>
    <label>Vitamins or supplements being taken</label>
    <type>TextArea</type>
</CustomField>